--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
-    <title>IT INSTITUTE</title>
+    <title>AS IT INSTITUTE</title>
     <style>
         /* Centering the container */
         .center-container {
@@ -24,7 +24,7 @@
         <div class="rounded-full bg-zinc-300 w-16 h-16 mx-auto mb-2">
             <img aria-hidden="true" alt="logo" src="logo.png" />
         </div>
-        <h1 class="text-2xl font-bold">IT INSTITUTE</h1>
+        <h1 class="text-2xl font-bold">AS IT INSTITUTE</h1>
     </div>
 
     <!-- Simple Details -->
@@ -53,11 +53,11 @@ Our mission is to provide top-notch services tailored to our clients' needs.
     <div class="text-center mb-6">
         <h2 class="text-lg font-semibold">Team Leader</h2>
         <div class="flex flex-col items-center">
-            <a href="https://example.com/leader" target="_blank">
+            <a href="x/a.html" target="_blank">
                 <div class="rounded-full bg-zinc-300 w-24 h-24 flex items-center justify-center mb-2">
-                    <img aria-hidden="true" alt="team leader" src="https://openui.fly.dev/openui/24x24.svg?text=👤" />
+                    <img aria-hidden="true" alt="team leader" src="a.png" />
                 </div>
-                <p class="font-medium">Leader Name</p>
+                <p class="font-medium">Md Asif Ahmed</p>
             </a>
         </div>
     </div>
@@ -78,24 +78,96 @@ Our mission is to provide top-notch services tailored to our clients' needs.
 
             <!-- Team Member 2 -->
             <div class="text-center">
-                <a href="https://example.com/member2" target="_blank">
+                <a href="x/kawsar.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
-                        <img aria-hidden="true" alt="team member" src="https://openui.fly.dev/openui/24x24.svg?text=👤" />
+                        <img aria-hidden="true" alt="team member" src="kawsar.jpg" />
                     </div>
-                    <p class="mt-2 font-medium">Member 2</p>
+                    <p class="mt-2 font-medium">MD. Rokibul Hasan Kawsar</p>
                 </a>
             </div>
 
             <!-- Team Member 3 -->
             <div class="text-center">
-                <a href="https://example.com/member3" target="_blank">
+                <a href="x/irin.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
-                        <img aria-hidden="true" alt="team member" src="https://openui.fly.dev/openui/24x24.svg?text=👤" />
+                        <img aria-hidden="true" alt="team member" src="irin.jpg" />
                     </div>
-                    <p class="mt-2 font-medium">Member 3</p>
+                    <p class="mt-2 font-medium">IRIN ISLAM</p>
                 </a>
             </div>
         </div>
+
+           <!-- Team Member 4 -->
+            <div class="text-center">
+                <a href="x/tamanna.html" target="_blank">
+                    <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
+                        <img aria-hidden="true" alt="team member" src="tamanna.jpg" />
+                    </div>
+                    <p class="mt-2 font-medium">Tamanna</p>
+                </a>
+            </div>
+        </div>
+
+
+    <!-- Team Member 5 -->
+            <div class="text-center">
+                <a href="x/tarikul.html" target="_blank">
+                    <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
+                        <img aria-hidden="true" alt="team member" src="tarikul.jpg" />
+                    </div>
+                    <p class="mt-2 font-medium">Tarikul Islam</p>
+                </a>
+            </div>
+        </div>
+
+<!-- Team Member 6 -->
+            <div class="text-center">
+                <a href="x/ashik.html" target="_blank">
+                    <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
+                        <img aria-hidden="true" alt="team member" src="ashik.jpg" />
+                    </div>
+                    <p class="mt-2 font-medium">Ashik Ahammed</p>
+                </a>
+            </div>
+        </div>
+
+
+<!-- Team Member 7 -->
+            <div class="text-center">
+                <a href="x/soniya.html" target="_blank">
+                    <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
+                        <img aria-hidden="true" alt="team member" src="soniya.jpg" />
+                    </div>
+                    <p class="mt-2 font-medium">Soniya Akter</p>
+                </a>
+            </div>
+        </div>
+    
+
+<!-- Team Member 8 -->
+            <div class="text-center">
+                <a href="x/noyon.html" target="_blank">
+                    <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
+                        <img aria-hidden="true" alt="team member" src="noyon.jpg" />
+                    </div>
+                    <p class="mt-2 font-medium">MD. Noyon</p>
+                </a>
+            </div>
+        </div>
+
+<!-- Team Member 9 -->
+            <div class="text-center">
+                <a href="x/jaba.html" target="_blank">
+                    <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
+                        <img aria-hidden="true" alt="team member" src="jaba.jpg" />
+                    </div>
+                    <p class="mt-2 font-medium">Jaba</p>
+                </a>
+            </div>
+        </div>
+
+
+    
         <div class="mt-4">
             <button class="bg-secondary text-secondary-foreground hover:bg-secondary/80 p-2 rounded">
                 More...
