--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Our mission is to provide top-notch services tailored to our clients' needs.
 
             <!-- Team Member 3 -->
             <div class="text-center">
-                <a href="x/irin.html" target="_blank">
+                <a href="irin.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
                         <img aria-hidden="true" alt="team member" src="irin.jpg" />
                     </div>
