--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Our mission is to provide top-notch services tailored to our clients' needs.
     <div class="text-center mb-6">
         <h2 class="text-lg font-semibold">Team Leader</h2>
         <div class="flex flex-col items-center">
-            <a href="x/a.html" target="_blank">
+            <a href="a.html" target="_blank">
                 <div class="rounded-full bg-zinc-300 w-24 h-24 flex items-center justify-center mb-2">
                     <img aria-hidden="true" alt="team leader" src="a.png" />
                 </div>
@@ -68,7 +68,7 @@ Our mission is to provide top-notch services tailored to our clients' needs.
         <div class="grid grid-cols-3 gap-6">
             <!-- Team Member 1 -->
             <div class="text-center">
-                <a href="x/mehdi.html" target="_blank">
+                <a href="mehdi.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
                         <img aria-hidden="true" alt="team member" src="mehdi.jpg" />
                     </div>
