--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Our mission is to provide top-notch services tailored to our clients' needs.
 
             <!-- Team Member 2 -->
             <div class="text-center">
-                <a href="x/kawsar.html" target="_blank">
+                <a href="kawsar.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
                         <img aria-hidden="true" alt="team member" src="kawsar.jpg" />
                     </div>
@@ -99,7 +99,7 @@ Our mission is to provide top-notch services tailored to our clients' needs.
 
            <!-- Team Member 4 -->
             <div class="text-center">
-                <a href="x/tamanna.html" target="_blank">
+                <a href="tamanna.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
                         <img aria-hidden="true" alt="team member" src="tamanna.jpg" />
                     </div>
@@ -111,7 +111,7 @@ Our mission is to provide top-notch services tailored to our clients' needs.
 
     <!-- Team Member 5 -->
             <div class="text-center">
-                <a href="x/tarikul.html" target="_blank">
+                <a href="tarikul.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
                         <img aria-hidden="true" alt="team member" src="tarikul.jpg" />
                     </div>
@@ -122,7 +122,7 @@ Our mission is to provide top-notch services tailored to our clients' needs.
 
 <!-- Team Member 6 -->
             <div class="text-center">
-                <a href="x/ashik.html" target="_blank">
+                <a href="ashik.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
                         <img aria-hidden="true" alt="team member" src="ashik.jpg" />
                     </div>
@@ -134,7 +134,7 @@ Our mission is to provide top-notch services tailored to our clients' needs.
 
 <!-- Team Member 7 -->
             <div class="text-center">
-                <a href="x/soniya.html" target="_blank">
+                <a href="soniya.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
                         <img aria-hidden="true" alt="team member" src="soniya.jpg" />
                     </div>
@@ -146,7 +146,7 @@ Our mission is to provide top-notch services tailored to our clients' needs.
 
 <!-- Team Member 8 -->
             <div class="text-center">
-                <a href="x/noyon.html" target="_blank">
+                <a href="noyon.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
                         <img aria-hidden="true" alt="team member" src="noyon.jpg" />
                     </div>
@@ -157,11 +157,11 @@ Our mission is to provide top-notch services tailored to our clients' needs.
 
 <!-- Team Member 9 -->
             <div class="text-center">
-                <a href="x/jaba.html" target="_blank">
+                <a href="joba.html" target="_blank">
                     <div class="rounded-full bg-zinc-300 w-16 h-16 flex items-center justify-center mx-auto">
-                        <img aria-hidden="true" alt="team member" src="jaba.jpg" />
+                        <img aria-hidden="true" alt="team member" src="joba.jpg" />
                     </div>
-                    <p class="mt-2 font-medium">Jaba</p>
+                    <p class="mt-2 font-medium">Joba</p>
                 </a>
             </div>
         </div>
