--- a/joba.html
+++ b/joba.html
@@ -178,7 +178,7 @@
         <div class="top-bar"></div>
         <div class="profile-section">
             <img src="android%20developer%20cover%20pic.jpg" alt="Cover Picture" class="cover-pic">
-            <img src="joba.jpg">
+            <img src="joba (1).jpg">
             <h1>MST JOBA</h1>
             <p>Welcome to visit My Profile</p>
         </div>
