--- a/soniya.html
+++ b/soniya.html
@@ -178,7 +178,7 @@
         <div class="top-bar"></div>
         <div class="profile-section">
             <img src="android%20developer%20cover%20pic.jpg" alt="Cover Picture" class="cover-pic">
-            <img src="soniya.jpg">
+            <img src="soniya (1).jpg">
             <h1>MST SONIYA</h1>
             <p>Welcome to visit My Profile</p>
         </div>
