--- a/kawsar.html
+++ b/kawsar.html
@@ -178,7 +178,7 @@
         <div class="top-bar"></div>
         <div class="profile-section">
             <img src="android%20developer%20cover%20pic.jpg" alt="Cover Picture" class="cover-pic">
-            <img src="kawsar.jpg">
+            <img src="kawsar (1).jpg">
             <h1>MD KAWSAR</h1>
             <p>Welcome to visit My Profile</p>
         </div>
