--- a/ashik.html
+++ b/ashik.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,67 +13,59 @@
             margin: 0;
             padding: 0;
         }
+
         .container {
-            width: 100vw;
-            height: 100vh;
-            padding: 10px;
+            width: 100%;
+            max-width: 800px;
+            margin: auto;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
-            display: flex;
-            flex-direction: column;
-            position: relative;
+            padding: 20px;
             box-sizing: border-box;
         }
+
         .top-bar {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 50px;
             background-color: #25D366;
-            z-index: 1;
         }
+
         .profile-section {
-            width: 100%;
+            margin-top: 10px;
             text-align: center;
-            margin-top: 50px;
         }
+
         .cover-pic {
             width: 100%;
             height: auto;
             max-height: 300px;
             object-fit: cover;
             border-radius: 10px;
-            position: relative;
-            margin-top: 10px;
         }
+
         .profile-pic {
             border-radius: 50%;
             width: 120px;
             height: 120px;
             object-fit: cover;
-            position: absolute;
-            top: 330px;
-            left: 50%;
-            transform: translateX(-50%);
+            margin-top: -60px;
             border: 5px solid #fff;
         }
+
         h1 {
             color: #000;
-            margin: 100px 0 20px;
+            margin: 20px 0 10px;
             font-size: 24px;
-            word-break: break-word;
         }
+
         p {
             line-height: 1.6;
             margin: 10px 0;
-            font-size: 18px;
-            color: #000000;
+            font-size: 16px;
+            color: #333;
         }
-        .info-section {
-            margin-top: 50px;
-        }
+
         .button-container {
             margin-top: 20px;
             display: flex;
@@ -82,6 +73,7 @@
             justify-content: center;
             gap: 10px;
         }
+
         .button {
             display: inline-block;
             padding: 10px 20px;
@@ -91,81 +83,72 @@
             text-decoration: none;
             font-size: 16px;
             transition: background-color 0.3s, box-shadow 0.3s;
+            cursor: pointer;
         }
+
         .button:hover {
             background-color: #555;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
+
         .whatsapp-button {
             background-color: #25D366;
         }
+
         .call-button {
             background-color: #007bff;
         }
+
         .facebook-button {
-            background-color: #6495ED;
+            background-color: #4267B2;
         }
+
         .page-button {
-            background-color: #6495ED;
+            background-color: #4267B2;
         }
+
         .messenger-button {
-            background-color: #0000FF;
+            background-color: #0084FF;
         }
-        .social-icons {
-            position: relative;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 30px;
-        }
-        .social-icons a {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            color: #333;
-        }
-        .social-icons img {
-            width: 30px;
-            height: 30px;
-            margin-right: 10px;
-        }
-        .social-icons p {
-            margin: 0;
-            font-size: 16px;
-        }
+
         @media (max-width: 768px) {
             .profile-pic {
                 width: 100px;
                 height: 100px;
-                top: 240px;
             }
+
             h1 {
                 font-size: 20px;
             }
+
             p {
-                font-size: 16px;
+                font-size: 14px;
             }
+
             .button {
                 font-size: 14px;
                 padding: 8px 16px;
             }
         }
+
         @media (max-width: 480px) {
             .cover-pic {
                 max-height: 200px;
             }
+
             .profile-pic {
                 width: 80px;
                 height: 80px;
-                top: 180px;
             }
+
             h1 {
                 font-size: 18px;
             }
+
             p {
-                font-size: 14px;
+                font-size: 12px;
             }
+
             .button {
                 font-size: 12px;
                 padding: 6px 12px;
@@ -173,32 +156,33 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="top-bar"></div>
         <div class="profile-section">
-            <img src="android%20developer%20cover%20pic.jpg" alt="Cover Picture" class="cover-pic">
-            <img src="ashik (1).jpg">
+            <img src="android%20developer%20cover%20pic.jpg">
+            <img src="ashik (1).jpg" alt="Profile Picture" class="profile-pic">
             <h1>MD ASHIK AHAMMED</h1>
             <p>Welcome to visit My Profile</p>
         </div>
         <div class="info-section">
-           <p>
-
-I am MD ASHIK AHAMMED is an experienced professional who has demonstrated expertise in App Development Web Development Graphics Design and Digital Marketing His multi-faceted skills in the digital field make him unique.</P>
-            <p>Contact us to make professional Android app, Website And learn Earning</p>
+            <p>
+                I am MD ASHIK AHAMMED, an experienced professional who has demonstrated expertise in App Development, Web
+                Development, Graphics Design, and Digital Marketing. My multi-faceted skills in the digital field make
+                me unique.
+            </p>
+            <p>Contact us to make professional Android apps, Websites, and learn Earning.</p>
             <p>Thanks for visiting my profile!</p>
         </div>
         <div class="button-container">
-            <a href="../external.html?link=https://wa.me/8801878246723" class="button whatsapp-button">WhatsApp</a>
+            <a href="https://wa.me/8801878246723" class="button whatsapp-button" target="_blank">WhatsApp</a>
             <a href="tel:+8801878246723" class="button call-button">Call Now</a>
-            <a href="../external.html?link=https://www.facebook.com/helloasifofficialbd" class="button facebook-button">Facebook Profile</a>
-            <a href="../external.html?link=https://www.facebook.com/asasif78" class="button page-button">Facebook Page</a>
-            <a href="../external.html?link=https://m.me/asasif78a" class="button messenger-button">Messenger</a>
+            <a href="https://www.facebook.com/helloasifofficialbd" class="button facebook-button" target="_blank">Facebook Profile</a>
+            <a href="https://www.facebook.com/asasif78" class="button page-button" target="_blank">Facebook Page</a>
+            <a href="https://m.me/asasif78a" class="button messenger-button" target="_blank">Messenger</a>
         </div>
-       
     </div>
 </body>
-
 
 </html>
